--- a/practice.html
+++ b/practice.html
@@ -26,10 +26,31 @@
         <img src="Logo.png" width="200" alt="Error to load this image."/>
     </a>
 
-    <!--Creating table-->
+    <!--Creating table - Sa paggawa ng table meron tayong table, caption, table row, table heading, and table dat. Sa table sya yung pinaka-body ng table natin, yung caption sya yung pinaka-caption or title ng table natin yung pwest nya nasa top center, sa table row sya yung pinaka-storage ng title ng row natin and then ng table data natin, sa table heading sya yung title ng first row natin kunyari item, price ganon, sa table data sya yung laman ng table heading natin sya yung content ganon sa item apple adn sa pricec 20 pesos.-->
+    <table>
+        <caption>
+            <tr>
+                <th>Item</th>
+                <th>Price</th>
+            </tr>
 
-    <!--Creating form-->
+            <tr>
+                <tr>
+                    <td>Apple</td>
+                    <td>25</td>
+                </tr>
+            </tr>
+        </caption>
+    </table><br>
+
+    <!--Creating form - Dito sa form may 2 attributes tayo: target and action. Sa target katulad lang ng sa linking natin kung san natin gusto ma open yung link pag pinindot natin, pero dito sa form submit yung magiging link natin, and then sa action attribute natin is dito natin ilalagay yung link kung san natin papapuntahin si user kapagka-pinindot na nya yung submit butto natin. Sa input text natin meron tayo 2 attributes yunf common use, placeholder and the value: Yung sa placeholder sya yung text don sa loob ng input type natin para ma indicate ni user kung anong info yung ilalagay nya sa loob ng input text natin na yon. Lay tayo ng attribute sa loob ng foem natin the target and action kung san natin papapuntahin si user pag-pinindot nya na yung submit.-->
+    <form target="_self" action="home.html">
+        <input type="email" placeholder="Email Address"/><br>
+        <input type="text" placeholder="Messages"/><br>
+        <input type="submit"/>
+    </form>
 
     <!--Input types-->
+    <
 </body>
 </html>
