--- a/practice.html
+++ b/practice.html
@@ -48,9 +48,15 @@
         <input type="email" placeholder="Email Address"/><br>
         <input type="text" placeholder="Messages"/><br>
         <input type="submit"/>
-    </form>
+    </form><br>
 
-    <!--Input types-->
-    <
+    <!--Input types - Meron tayong text, email, password, number, telephone number, and url. Sa text gingagamit natin to para natural text lang gaya ng messages, sa email ginagamit natin to pag need natin ng email info ni user, sa password kapaka-need natin ng password info ni user, sa number need natin to para sa verification code para di makag-type si user ng text as in number lang talaga, tel naman dito yung sa ibang app natin kapagka ayaw natin ng email address gamitin natin as gmail pwede tayo gumamit ng tel number as gmail natin, then last sa url ginagamir natin to sa video sdownloader ganon pkinukuha natin yung link lnag i mean link lang yung aacept ng ipnut type natin hten lalabas na yung butto na download pag na hanap na ng system natin yung video sa loob ng url na pinaste natin.-->
+    <input type="text" placeholder="Messages"><br>
+    <input type="email" placeholder="Email Address"><br>
+    <input type="password" placeholder="Password"><br>
+    <input type="number" placeholder="Verification code"><br>
+    <input type="tel" placeholder="Telephone number"><br>
+    <input type="url" placeholder="Paste the link">
+
 </body>
 </html>
